Fix for nav spacing.
Added string concat to parse number as pixel string.

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -18,10 +18,6 @@ main {
     background-color: @app-bg-color-dark;
   }
 
-  section {
-    padding-top: 110px;
-  }
-
   h2 {
     display: inline-block;
     text-align: center;
